--- a/src/components/list/styles.css
+++ b/src/components/list/styles.css
@@ -8,8 +8,8 @@
 }
 
 .cardContainer {
+    /* display: flex; */
     background:  rgb(249, 250, 249);
-    display: flex;
     justify-content: center;
     align-items: center;
     padding: 5px;
@@ -19,14 +19,17 @@
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    padding-left: 15px;
     padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
 
   .img{
      background: rgb(231, 229, 229);
-      width: 90%;
+      width: 200px;
   }
 
 
@@ -40,6 +43,10 @@
       width: 100%;
       padding-top : 5px
     }
+
+    .img{
+      width: 270px;
+   }
   }
   
   @media screen and (min-width: 701px) and (max-width: 1024px){
